--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
 safetensors==0.4.5
+sentencepiece==0.2.0
 setuptools==75.1.0
 sympy==1.13.3
 tokenizers==0.20.0
