--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,24 @@
+aiofiles==23.2.1
+annotated-types==0.7.0
+anyio==4.6.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
+fastapi==0.115.0
+ffmpy==0.4.0
 filelock==3.16.1
 fsspec==2024.9.0
+gradio==5.0.0
+gradio_client==1.4.0
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
 huggingface-hub==0.25.2
 idna==3.10
 Jinja2==3.1.4
-MarkupSafe==3.0.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.3
 numpy==2.1.2
@@ -21,21 +34,42 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.6.77
 nvidia-nvtx-cu12==12.1.105
+orjson==3.10.7
 packaging==24.1
+pandas==2.2.3
 pillow==10.4.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydub==0.25.1
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+python-multipart==0.0.12
+pytz==2024.2
 PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
+rich==13.9.2
+ruff==0.6.9
 safetensors==0.4.5
+semantic-version==2.10.0
 sentencepiece==0.2.0
 setuptools==75.1.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+starlette==0.38.6
 sympy==1.13.3
 tokenizers==0.20.0
+tomlkit==0.12.0
 torch==2.4.1
 torchaudio==2.4.1
 torchvision==0.19.1
 tqdm==4.66.5
 transformers==4.45.2
 triton==3.0.0
+typer==0.12.5
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
+uvicorn==0.31.0
+websockets==12.0
